[gd_scene load_steps=25 format=3 uid="uid://cfwqbab6wkmxp"]

[ext_resource type="Script" path="res://cashier.gd" id="1_8f8uc"]
[ext_resource type="Script" path="res://PanoramaHBox.gd" id="1_67t6x"]
[ext_resource type="Texture2D" uid="uid://dt12h7xdxfvef" path="res://Sprites/cashier.png" id="1_p0hp7"]
[ext_resource type="Texture2D" uid="uid://ly3wjbw48q30" path="res://Sprites/shelves.png" id="2_khq8i"]
[ext_resource type="Texture2D" uid="uid://cj85kup6v7amd" path="res://Sprites/shelves light.png" id="3_3h22u"]
[ext_resource type="Script" path="res://camera.gd" id="3_xqgks"]
[ext_resource type="PackedScene" uid="uid://d1f1fk2kiy4ty" path="res://player.tscn" id="4_kqcib"]
[ext_resource type="Script" path="res://Basement Entrance.gd" id="6_ni8w8"]
[ext_resource type="Script" path="res://Text.gd" id="7_han4y"]
[ext_resource type="FontFile" uid="uid://do5gjoyxrtu6a" path="res://PublicPixel.ttf" id="8_arw6r"]
[ext_resource type="Texture2D" uid="uid://bvlg1cwparbr" path="res://Sprites/sign.png" id="8_cs0in"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xawxv"]
size = Vector2(4124, 620)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bxu3f"]
size = Vector2(17.5762, 33.9714)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekq73"]
atlas = ExtResource("1_p0hp7")
region = Rect2(0, 0, 157, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_obpyf"]
atlas = ExtResource("1_p0hp7")
region = Rect2(157, 0, 157, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jvaf"]
atlas = ExtResource("1_p0hp7")
region = Rect2(314, 0, 157, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_afdt3"]
atlas = ExtResource("1_p0hp7")
region = Rect2(471, 0, 157, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_i7xeu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekq73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obpyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jvaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afdt3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_imqe1"]
size = Vector2(83, 183)

[sub_resource type="Animation" id="Animation_comn3"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 40), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_s7amm"]
resource_name = "fade out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -40)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b1sl7"]
_data = {
"fade": SubResource("Animation_comn3"),
"fade out": SubResource("Animation_s7amm")
}

[sub_resource type="Animation" id="Animation_u8elv"]
resource_name = "Scary"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("BlackShade:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3, 4, 5.5, 6),
"transitions": PackedFloat32Array(1, 100, 1, 1e+06, 1),
"update": 1,
"values": [false, true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Cashier/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4, 6, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DialoguePlayer:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["I want some milk."]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DialoguePlayer:visible_characters")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 10, 20]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_20tth"]
_data = {
"Scary": SubResource("Animation_u8elv")
}

[node name="Node2D" type="Node2D"]

[node name="background" type="Node2D" parent="."]

[node name="World" type="Node2D" parent="."]
position = Vector2(1, -5)

[node name="Tiled Sprites" type="HBoxContainer" parent="World"]
clip_contents = true
layout_direction = 2
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 215.0
offset_right = 1344.0
offset_bottom = 471.0
grow_horizontal = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(1, 0)
theme_override_constants/separation = 0
alignment = 1
script = ExtResource("1_67t6x")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="World/Tiled Sprites"]
layout_mode = 2
texture = ExtResource("2_khq8i")

[node name="TextureRect2" type="TextureRect" parent="World/Tiled Sprites"]
layout_mode = 2
texture = ExtResource("2_khq8i")

[node name="TextureRect3" type="TextureRect" parent="World/Tiled Sprites"]
layout_mode = 2
texture = ExtResource("2_khq8i")

[node name="TextureRect4" type="TextureRect" parent="World/Tiled Sprites"]
layout_mode = 2
texture = ExtResource("2_khq8i")

[node name="TextureRect5" type="TextureRect" parent="World/Tiled Sprites"]
layout_mode = 2
texture = ExtResource("2_khq8i")

[node name="TextureRect6" type="TextureRect" parent="World/Tiled Sprites"]
layout_mode = 2
texture = ExtResource("2_khq8i")

[node name="TextureRect7" type="TextureRect" parent="World/Tiled Sprites"]
layout_mode = 2
texture = ExtResource("2_khq8i")

[node name="StaticBody2D" type="StaticBody2D" parent="World/Tiled Sprites"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Tiled Sprites/StaticBody2D"]
position = Vector2(707.5, 334)
scale = Vector2(0.25, 0.25)
shape = SubResource("RectangleShape2D_xawxv")

[node name="Tiled Sprites2" type="HBoxContainer" parent="World"]
clip_contents = true
layout_direction = 2
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 215.0
offset_right = 1344.0
offset_bottom = 471.0
grow_horizontal = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(1, 0)
theme_override_constants/separation = 0
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="World/Tiled Sprites2"]
layout_mode = 2
texture = ExtResource("3_3h22u")

[node name="TextureRect2" type="TextureRect" parent="World/Tiled Sprites2"]
layout_mode = 2
texture = ExtResource("3_3h22u")

[node name="TextureRect12" type="TextureRect" parent="World/Tiled Sprites2"]
layout_mode = 2
texture = ExtResource("3_3h22u")

[node name="TextureRect13" type="TextureRect" parent="World/Tiled Sprites2"]
layout_mode = 2
texture = ExtResource("3_3h22u")

[node name="TextureRect14" type="TextureRect" parent="World/Tiled Sprites2"]
layout_mode = 2
texture = ExtResource("3_3h22u")

[node name="TextureRect15" type="TextureRect" parent="World/Tiled Sprites2"]
layout_mode = 2
texture = ExtResource("3_3h22u")

[node name="TextureRect16" type="TextureRect" parent="World/Tiled Sprites2"]
layout_mode = 2
texture = ExtResource("3_3h22u")

[node name="TextureRect17" type="TextureRect" parent="World/Tiled Sprites2"]
layout_mode = 2
texture = ExtResource("3_3h22u")

[node name="TextureRect3" type="TextureRect" parent="World/Tiled Sprites2"]
layout_mode = 2
texture = ExtResource("3_3h22u")

[node name="TextureRect4" type="TextureRect" parent="World/Tiled Sprites2"]
layout_mode = 2
texture = ExtResource("3_3h22u")

[node name="TextureRect5" type="TextureRect" parent="World/Tiled Sprites2"]
layout_mode = 2
texture = ExtResource("3_3h22u")

[node name="TextureRect6" type="TextureRect" parent="World/Tiled Sprites2"]
layout_mode = 2
texture = ExtResource("3_3h22u")

[node name="TextureRect7" type="TextureRect" parent="World/Tiled Sprites2"]
layout_mode = 2
texture = ExtResource("3_3h22u")

[node name="TextureRect8" type="TextureRect" parent="World/Tiled Sprites2"]
layout_mode = 2
texture = ExtResource("3_3h22u")

[node name="TextureRect9" type="TextureRect" parent="World/Tiled Sprites2"]
layout_mode = 2
texture = ExtResource("3_3h22u")

[node name="TextureRect10" type="TextureRect" parent="World/Tiled Sprites2"]
layout_mode = 2
texture = ExtResource("3_3h22u")

[node name="TextureRect11" type="TextureRect" parent="World/Tiled Sprites2"]
layout_mode = 2
texture = ExtResource("3_3h22u")

[node name="DialogueCashier" type="Label" parent="World"]
offset_left = 4315.0
offset_top = 598.0
offset_right = 4603.0
offset_bottom = 644.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("8_arw6r")
horizontal_alignment = 2

[node name="DialoguePlayer" type="Label" parent="World"]
offset_left = 4247.0
offset_top = 572.0
offset_right = 4677.0
offset_bottom = 718.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("8_arw6r")
text = "I want some milk."
visible_characters = 20
visible_ratio = 1.17647

[node name="Cashier" type="CharacterBody2D" parent="World"]
position = Vector2(0, 8)
script = ExtResource("1_8f8uc")

[node name="Scene Trigger" type="Area2D" parent="World/Cashier"]
position = Vector2(4325, 620)

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Cashier/Scene Trigger"]
position = Vector2(20.1216, -97)
scale = Vector2(5.67572, -13.973)
shape = SubResource("RectangleShape2D_bxu3f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="World/Cashier"]
position = Vector2(4521, 594)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_i7xeu")
frame = 1

[node name="Basement Entrance" type="Area2D" parent="World/Cashier"]
position = Vector2(4542, 671)
script = ExtResource("6_ni8w8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Cashier/Basement Entrance"]
position = Vector2(1.5, -14.5)
shape = SubResource("RectangleShape2D_imqe1")

[node name="Text" type="Node2D" parent="World/Cashier/Basement Entrance"]
position = Vector2(-30, -114)
scale = Vector2(0.5, 0.5)
script = ExtResource("7_han4y")

[node name="Label" type="Label" parent="World/Cashier/Basement Entrance/Text"]
offset_right = 144.0
offset_bottom = 46.0001
theme_override_fonts/font = ExtResource("8_arw6r")

[node name="Animation" type="AnimationPlayer" parent="World/Cashier/Basement Entrance/Text"]
root_node = NodePath("../Label")
libraries = {
"": SubResource("AnimationLibrary_b1sl7")
}

[node name="CashierCutscene" type="AnimationPlayer" parent="World"]
libraries = {
"": SubResource("AnimationLibrary_20tth")
}

[node name="Camera2D" type="Camera2D" parent="World"]
position = Vector2(3953, 529)
zoom = Vector2(2, 2)
position_smoothing_enabled = true
script = ExtResource("3_xqgks")

[node name="Player" parent="World" instance=ExtResource("4_kqcib")]
position = Vector2(3951, 579)

[node name="Sign" type="Sprite2D" parent="World"]
position = Vector2(-237, 720)
scale = Vector2(2, 2)
texture = ExtResource("8_cs0in")

[node name="BlackShade" type="ColorRect" parent="World"]
visible = false
modulate = Color(1, 1, 1, 0.854902)
offset_left = 3240.0
offset_top = 125.0
offset_right = 5198.0
offset_bottom = 923.0
color = Color(0, 0, 0, 1)

[connection signal="body_entered" from="World/Cashier/Scene Trigger" to="World/Cashier" method="_on_scene_trigger_body_entered"]
[connection signal="body_entered" from="World/Cashier/Basement Entrance" to="World/Cashier/Basement Entrance" method="_on_body_entered"]
[connection signal="body_exited" from="World/Cashier/Basement Entrance" to="World/Cashier/Basement Entrance" method="_on_body_exited"]
[connection signal="animation_finished" from="World/CashierCutscene" to="World/Cashier" method="_on_cashier_cutscene_animation_finished"]
